NetBSD Problem Report #55426

From gson@gson.org  Sat Jun 27 16:10:14 2020
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id DAF7C1A9228
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 27 Jun 2020 16:10:13 +0000 (UTC)
Message-Id: <20200627161008.C6ADD253EE4@guava.gson.org>
Date: Sat, 27 Jun 2020 19:10:08 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: New zfs test failures
X-Send-Pr-Version: 3.95

>Number:         55426
>Category:       kern
>Synopsis:       New zfs test failures
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    jdolecek
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jun 27 16:15:00 +0000 2020
>Closed-Date:    Sun Jun 28 11:07:53 +0000 2020
>Last-Modified:  Sun Jun 28 11:07:53 +0000 2020
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date >= 2020.06.24.16.29.34
>Organization:
>Environment:
System: NetBSD
Architecture: x86_64
Machine: amd64
>Description:

About 60 zfs test cases are failing on real amd64 hardware since these commits:

  2020.06.24.16.16.01 jdolecek src/external/cddl/osnet/dist/uts/common/fs/zfs/vdev_queue.c 1.2
  2020.06.24.16.23.16 jdolecek src/external/cddl/osnet/dist/uts/common/fs/zfs/dsl_scan.c 1.2
  2020.06.24.16.29.34 jdolecek src/external/cddl/osnet/dist/uts/common/fs/zfs/dsl_scan.c 1.3

Logs:

  http://www.gson.org/netbsd/bugs/build/amd64-baremetal/commits-2020.06.html#2020.06.24.16.29.34

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->jdolecek
Responsible-Changed-By: gson@NetBSD.org
Responsible-Changed-When: Sat, 27 Jun 2020 16:17:43 +0000
Responsible-Changed-Why:
Over to committer.


State-Changed-From-To: open->analyzed
State-Changed-By: jdolecek@NetBSD.org
State-Changed-When: Sat, 27 Jun 2020 21:22:36 +0000
State-Changed-Why:
I believe I fixed it, lets see what will happen on next test run.


From: "Jaromir Dolecek" <jdolecek@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55426 CVS commit: src/external/cddl/osnet/dist/uts/common/fs/zfs
Date: Sat, 27 Jun 2020 21:21:11 +0000

 Module Name:	src
 Committed By:	jdolecek
 Date:		Sat Jun 27 21:21:11 UTC 2020

 Modified Files:
 	src/external/cddl/osnet/dist/uts/common/fs/zfs: vdev_queue.c

 Log Message:
 fix bug introduced in conversion to kmem(9), passing address of the local
 variable instead of pointer to allocated memory

 should fix PR kern/55426 by Andreas Gustafsson


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 \
     src/external/cddl/osnet/dist/uts/common/fs/zfs/vdev_queue.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: analyzed->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Sun, 28 Jun 2020 11:07:53 +0000
State-Changed-Why:
Confirmed fixed.  Thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.