fix bug introduced in conversion to kmem(9), passing address of the local variable instead of pointer to allocated memory

should fix PR kern/55426 by Andreas Gustafsson